project-manifests/db.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres


---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: project
spec:
  replicas: 1
  serviceName: "postgres-svc"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
