project-manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-stripprefix
  namespace: project
spec:
  stripPrefix:
    prefixes:
      - /todo-backend
      - /todo

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  namespace: project
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: project-default-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /todo-backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 3797
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
      - path: /_next
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
